[package]
name = "canvy"
version = "0.2.2"
edition = "2021"
authors = ["Anuar <anuarsaenger.2001@gmail.com>"]
description = "A helper package for representing 2D canvases"
repository = "https://github.com/Ripred100/canvas"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
